--- a/iStore/Views/BestSellingViewCell.xib
+++ b/iStore/Views/BestSellingViewCell.xib
@@ -1,21 +1,110 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BestSellingViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BestSellingViewCell" customModule="iStore" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gI-zw-JLa">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9LO-sI-4IE">
+                                <rect key="frame" x="8" y="8" width="184" height="200"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ckB-l1-fVV">
+                                        <rect key="frame" x="0.0" y="0.0" width="184" height="200"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstItem="ckB-l1-fVV" firstAttribute="top" secondItem="9LO-sI-4IE" secondAttribute="top" id="8Yw-Kc-zlN"/>
+                                    <constraint firstAttribute="bottom" secondItem="ckB-l1-fVV" secondAttribute="bottom" id="BS8-tH-vfI"/>
+                                    <constraint firstAttribute="height" constant="200" id="T44-EE-fZn"/>
+                                    <constraint firstAttribute="trailing" secondItem="ckB-l1-fVV" secondAttribute="trailing" id="oJ0-cs-emB"/>
+                                    <constraint firstItem="ckB-l1-fVV" firstAttribute="leading" secondItem="9LO-sI-4IE" secondAttribute="leading" id="qbP-Ke-tkZ"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="dze-uo-W8U">
+                                <rect key="frame" x="8" y="216" width="184" height="76"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="koZ-ha-i8q">
+                                        <rect key="frame" x="0.0" y="0.0" width="45" height="25.333333333333332"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i6I-5C-a3B">
+                                        <rect key="frame" x="0.0" y="25.333333333333343" width="33.666666666666664" height="25.333333333333329"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <color key="textColor" systemColor="systemGray2Color"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SKH-6j-xoq">
+                                        <rect key="frame" x="0.0" y="50.666666666666686" width="37" height="25.333333333333329"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <color key="textColor" systemColor="linkColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="dze-uo-W8U" secondAttribute="bottom" constant="8" id="1iJ-6A-mCj"/>
+                            <constraint firstItem="9LO-sI-4IE" firstAttribute="top" secondItem="1gI-zw-JLa" secondAttribute="top" constant="8" id="Q63-4M-gGA"/>
+                            <constraint firstItem="dze-uo-W8U" firstAttribute="leading" secondItem="1gI-zw-JLa" secondAttribute="leading" constant="8" id="UiL-xL-aKf"/>
+                            <constraint firstAttribute="trailing" secondItem="9LO-sI-4IE" secondAttribute="trailing" constant="8" id="ZMV-o0-pml"/>
+                            <constraint firstItem="dze-uo-W8U" firstAttribute="top" secondItem="9LO-sI-4IE" secondAttribute="bottom" constant="8" id="aCF-We-uL1"/>
+                            <constraint firstItem="9LO-sI-4IE" firstAttribute="leading" secondItem="1gI-zw-JLa" secondAttribute="leading" constant="8" id="aUF-YO-Y9D"/>
+                            <constraint firstAttribute="trailing" secondItem="dze-uo-W8U" secondAttribute="trailing" constant="8" id="qCA-CM-LMj"/>
+                            <constraint firstAttribute="width" constant="200" id="sZN-J7-kiS"/>
+                            <constraint firstAttribute="height" constant="300" id="vDu-92-vMi"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="1gI-zw-JLa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="44v-Gh-87J"/>
+                <constraint firstAttribute="bottom" secondItem="1gI-zw-JLa" secondAttribute="bottom" id="HqS-2U-axd"/>
+                <constraint firstItem="1gI-zw-JLa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="nWH-gn-BKu"/>
+                <constraint firstAttribute="trailing" secondItem="1gI-zw-JLa" secondAttribute="trailing" id="xK1-W2-Icu"/>
+            </constraints>
+            <size key="customSize" width="200" height="300"/>
+            <connections>
+                <outlet property="brand" destination="i6I-5C-a3B" id="11T-0n-bzl"/>
+                <outlet property="image" destination="ckB-l1-fVV" id="m6u-mI-4DH"/>
+                <outlet property="imageContainer" destination="9LO-sI-4IE" id="Ttf-xG-kIE"/>
+                <outlet property="label" destination="koZ-ha-i8q" id="ksP-wu-Dbq"/>
+                <outlet property="price" destination="SKH-6j-xoq" id="2Ng-FT-7mN"/>
+            </connections>
+            <point key="canvasLocation" x="140.45801526717557" y="37.323943661971832"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
