--- a/iStore/Views/CategoryViewCell.xib
+++ b/iStore/Views/CategoryViewCell.xib
@@ -4,59 +4,78 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="CategoryViewCell" customModule="iStore" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="72" height="128"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="72" height="128"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o3-YY-TSa">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="72" height="128"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pz-Ma-2l5">
-                                <rect key="frame" x="37" y="16" width="54" height="54"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wIb-PU-5Lb">
+                                <rect key="frame" x="7" y="16" width="58" height="58"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pz-Ma-2l5">
+                                        <rect key="frame" x="8" y="8" width="42" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="42" id="tlw-p1-GKQ"/>
+                                            <constraint firstAttribute="width" constant="42" id="v1I-78-1YT"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="54" id="mHc-Gz-VWJ"/>
-                                    <constraint firstAttribute="height" constant="54" id="uD0-fe-Mq5"/>
+                                    <constraint firstItem="9pz-Ma-2l5" firstAttribute="top" secondItem="wIb-PU-5Lb" secondAttribute="top" constant="8" id="2n2-Iw-qE8"/>
+                                    <constraint firstItem="9pz-Ma-2l5" firstAttribute="leading" secondItem="wIb-PU-5Lb" secondAttribute="leading" constant="8" id="YaX-5z-IFk"/>
+                                    <constraint firstAttribute="trailing" secondItem="9pz-Ma-2l5" secondAttribute="trailing" constant="8" id="fii-Fl-cv4"/>
+                                    <constraint firstAttribute="bottom" secondItem="9pz-Ma-2l5" secondAttribute="bottom" constant="8" id="k5c-Gj-ZgM"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6e-Ez-0af">
-                                <rect key="frame" x="43.333333333333329" y="78" width="41.333333333333329" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20.666666666666671" y="82" width="31" height="30"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="e6e-Ez-0af" firstAttribute="top" secondItem="9pz-Ma-2l5" secondAttribute="bottom" constant="8" id="2q1-MK-EwR"/>
-                            <constraint firstItem="e6e-Ez-0af" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="EAq-S5-xfK"/>
-                            <constraint firstItem="9pz-Ma-2l5" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="Plb-mj-kG1"/>
-                            <constraint firstAttribute="width" constant="128" id="YI0-M4-L0p"/>
-                            <constraint firstAttribute="bottom" secondItem="e6e-Ez-0af" secondAttribute="bottom" constant="16" id="ZlG-ec-hyW"/>
-                            <constraint firstItem="9pz-Ma-2l5" firstAttribute="top" secondItem="6o3-YY-TSa" secondAttribute="top" constant="16" id="iG3-6S-600"/>
-                            <constraint firstAttribute="height" constant="128" id="tYJ-5H-rBH"/>
+                            <constraint firstItem="e6e-Ez-0af" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="8X8-aW-Rcj"/>
+                            <constraint firstItem="e6e-Ez-0af" firstAttribute="top" secondItem="wIb-PU-5Lb" secondAttribute="bottom" constant="8" id="E6M-RL-Cb9"/>
+                            <constraint firstItem="wIb-PU-5Lb" firstAttribute="top" secondItem="6o3-YY-TSa" secondAttribute="top" constant="16" id="JUv-RD-b2U"/>
+                            <constraint firstAttribute="height" constant="128" id="LjH-bC-fi7"/>
+                            <constraint firstItem="wIb-PU-5Lb" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="nBg-f2-H0E"/>
+                            <constraint firstAttribute="bottom" secondItem="e6e-Ez-0af" secondAttribute="bottom" constant="16" id="qlS-jS-Dnm"/>
+                            <constraint firstAttribute="width" constant="72" id="sie-zs-WmN"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="6o3-YY-TSa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5W8-3o-KaD"/>
-                <constraint firstItem="6o3-YY-TSa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="XFh-xE-mJE"/>
-                <constraint firstAttribute="trailing" secondItem="6o3-YY-TSa" secondAttribute="trailing" id="gVU-Bf-8oJ"/>
-                <constraint firstAttribute="bottom" secondItem="6o3-YY-TSa" secondAttribute="bottom" id="vO7-yD-0BV"/>
+                <constraint firstAttribute="trailing" secondItem="6o3-YY-TSa" secondAttribute="trailing" id="29l-CC-zMe"/>
+                <constraint firstAttribute="bottom" secondItem="6o3-YY-TSa" secondAttribute="bottom" id="ErC-Vu-3rM"/>
+                <constraint firstItem="6o3-YY-TSa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="lLb-iU-LY0"/>
+                <constraint firstItem="6o3-YY-TSa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rih-gF-K9M"/>
             </constraints>
-            <size key="customSize" width="128" height="128"/>
+            <size key="customSize" width="72" height="128"/>
             <connections>
                 <outlet property="icon" destination="9pz-Ma-2l5" id="QiA-6F-ihW"/>
+                <outlet property="iconContainer" destination="wIb-PU-5Lb" id="3Pt-Dy-4Qh"/>
                 <outlet property="label" destination="e6e-Ez-0af" id="0Ck-37-2W6"/>
             </connections>
-            <point key="canvasLocation" x="90.07633587786259" y="17.605633802816904"/>
+            <point key="canvasLocation" x="12.213740458015266" y="5.6338028169014089"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
