--- a/iStore/Views/Main.storyboard
+++ b/iStore/Views/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,14 +18,14 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="wb5-mt-NYi"/>
+                        <segue destination="iZH-81-4jX" kind="relationship" relationship="rootViewController" id="wjO-Kc-ER2"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rbV-O0-L5U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-953" y="-2"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Explore-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="iStore" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,50 +34,100 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="k94-Na-Sh2">
-                                <rect key="frame" x="16" y="119.00000000000001" width="361" height="228.33333333333337"/>
+                                <rect key="frame" x="0.0" y="119" width="393" height="590.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4hi-ko-INm">
-                                        <rect key="frame" x="0.0" y="0.0" width="361" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="42"/>
                                         <subviews>
                                             <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Lhb-Ov-LeA">
-                                                <rect key="frame" x="0.0" y="0.0" width="278" height="56"/>
+                                                <rect key="frame" x="8" y="0.0" width="327" height="42"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
                                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="NY4-po-zk2"/>
                                                 </connections>
                                             </searchBar>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poC-yK-Wjy">
-                                                <rect key="frame" x="286" y="0.0" width="75" height="56"/>
+                                                <rect key="frame" x="343" y="0.0" width="42" height="42"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="42" id="i2Z-a1-141"/>
+                                                    <constraint firstAttribute="height" constant="42" id="pBX-C8-jxw"/>
+                                                </constraints>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <imageReference key="image" image="camera.fill" catalog="system" symbolScale="medium"/>
+                                                    <backgroundConfiguration key="background" cornerRadius="54">
+                                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                    </backgroundConfiguration>
+                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
                                             </button>
                                         </subviews>
+                                        <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="8"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="B0n-7s-jXN">
-                                        <rect key="frame" x="0.0" y="72.000000000000014" width="361" height="156.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="58.000000000000014" width="393" height="172.33333333333337"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcA-f8-lt0">
-                                                <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pbu-hS-Qnx">
-                                                <rect key="frame" x="0.0" y="28.333333333333343" width="361" height="128"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="13H-OH-tK8">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="36.333333333333336"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcA-f8-lt0">
+                                                        <rect key="frame" x="16" y="7.9999999999999982" width="361" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
+                                            </stackView>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pbu-hS-Qnx">
+                                                <rect key="frame" x="0.0" y="44.333333333333343" width="393" height="128"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="5f3-Yh-axo"/>
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XOL-VU-7aV">
-                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="itemSize" width="72" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells/>
                                                 <connections>
                                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="jaP-8d-jT8"/>
-                                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="qcr-D0-EwH"/>
+                                                </connections>
+                                            </collectionView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="L0o-KA-0Zk">
+                                        <rect key="frame" x="0.0" y="246.33333333333334" width="393" height="344.33333333333326"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6fn-iP-tcG">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="36.333333333333336"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best selling" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dJ-s0-s23">
+                                                        <rect key="frame" x="16" y="7.9999999999999982" width="361" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
+                                            </stackView>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0JC-2h-q2D">
+                                                <rect key="frame" x="0.0" y="44.333333333333371" width="393" height="300"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="o7p-kn-mmv"/>
+                                                </constraints>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S8k-5k-eCg">
+                                                    <size key="itemSize" width="200" height="300"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="7Dr-b3-GmO"/>
                                                 </connections>
                                             </collectionView>
                                         </subviews>
@@ -87,24 +138,66 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="k94-Na-Sh2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="9ni-FU-7rk"/>
-                            <constraint firstItem="k94-Na-Sh2" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" constant="-16" id="Lri-uc-oai"/>
-                            <constraint firstItem="k94-Na-Sh2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="ViB-95-8EV"/>
+                            <constraint firstItem="k94-Na-Sh2" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Bn7-yT-iB6"/>
+                            <constraint firstItem="k94-Na-Sh2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="GjY-rs-fYv"/>
+                            <constraint firstItem="k94-Na-Sh2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="z7I-xo-pex"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Explore" image="house.fill" catalog="system" id="7o6-D0-Xqq"/>
                     <navigationItem key="navigationItem" id="h6Z-EC-vDd"/>
                     <connections>
+                        <outlet property="bestSellingCV" destination="0JC-2h-q2D" id="XLS-2r-6sX"/>
                         <outlet property="categoriesCV" destination="Pbu-hS-Qnx" id="v83-Bh-QLg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116.79389312977099" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="1079" y="-396"/>
+        </scene>
+        <!--Cart-->
+        <scene sceneID="oDV-Jm-ddi">
+            <objects>
+                <viewController id="U38-8Q-dgR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pcB-9g-QON">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="jDs-rU-JhU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Cart" image="cart.fill" catalog="system" id="Jbn-F9-Fbc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TsS-i0-LSK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1079" y="393"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1am-WS-6e3">
+            <objects>
+                <tabBarController id="iZH-81-4jX" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="qlQ-Ah-Px3"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="fill" id="fBx-41-oNV">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="gV3-8h-cwP"/>
+                        <segue destination="U38-8Q-dgR" kind="relationship" relationship="viewControllers" id="7RK-WN-HId"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bSJ-AB-sLz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="103" y="-2"/>
         </scene>
     </scenes>
     <resources>
+        <image name="camera.fill" catalog="system" width="128" height="93"/>
+        <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <image name="house.fill" catalog="system" width="128" height="104"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
